# next

./: .gitignore  next.config.js  package-lock.json  package.json  tsconfig.json
components/: nav.tsx  radio.tsx
components/layouts/: article.tsx  main.tsx
diagnostic_nn/: Cargo.toml
diagnostic_nn/examples/: covid19.rs  data_proc.py
diagnostic_nn/examples/data/: datalabel  dataset
diagnostic_nn/model/: covid19
diagnostic_nn/src/: covid19.rs  data_proc.py  main.rs
graphql/diagnostic/: model.ts  resolver.ts
graphql/emergency_call/: model.ts  resolver.ts
graphql/resolver/: diagnostic.resolver.ts  emergency_call.resolver.ts  index.ts  tip.resolver.ts  user.resolver.ts
graphql/schema/: diagnostic.schema.ts  emergency_call.schema.ts  tip.schema.ts  user.schema.ts
graphql/tip/: model.ts  resolver.ts
graphql/user/: resolver.ts
lib/: dbConnect.js  requireAuth.tsx  userHook.ts
pages/: _app.tsx  analyze.tsx  emergency.tsx  games.tsx  index.tsx  login.tsx  register.tsx
pages/api/: graphql.ts
pages/patient/: [uid].tsx
pages/patient/list/: [uid].tsx
pages/tip/: index.tsx  send.tsx
